[gd_scene load_steps=10 format=3 uid="uid://updwxgjptqwa"]

[ext_resource type="Script" path="res://Script/game_ui.gd" id="1_bwo8h"]
[ext_resource type="Texture2D" uid="uid://c7phcmtviv8cd" path="res://UI/Buttons/pause_button.png" id="2_joojj"]
[ext_resource type="Texture2D" uid="uid://b5wyikfucxdgy" path="res://UI/Buttons/pause_x.png" id="3_fsdm0"]
[ext_resource type="Texture2D" uid="uid://cvaujmbykmcib" path="res://UI/Buttons/pause_button_hover.png" id="4_khset"]
[ext_resource type="Texture2D" uid="uid://civjm2br6ghvj" path="res://UI/Buttons/Bg pause screen.png" id="5_kpb35"]
[ext_resource type="Texture2D" uid="uid://chkf7q3wgxvuw" path="res://UI/Buttons/Continue.png" id="6_um56d"]
[ext_resource type="Texture2D" uid="uid://n33qh1bwx82f" path="res://UI/Buttons/Continue_hover.png" id="7_m7d1w"]
[ext_resource type="Texture2D" uid="uid://b2x6fghvkkeff" path="res://UI/Buttons/Save & Quit.png" id="8_fa0fg"]
[ext_resource type="Texture2D" uid="uid://dsuibjle3w3nb" path="res://UI/Buttons/Save & Quit_hover.png" id="9_3xnu2"]

[node name="Game UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwo8h")

[node name="Pause_button" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 1061.0
offset_top = 14.0
offset_right = 1251.0
offset_bottom = 66.0
scale = Vector2(2.72, 2.72)
texture_normal = ExtResource("2_joojj")
texture_pressed = ExtResource("3_fsdm0")
texture_hover = ExtResource("4_khset")

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PauseRect" type="TextureRect" parent="PauseMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 127.0
offset_top = 67.0
offset_right = 383.0
offset_bottom = 323.0
scale = Vector2(3.52236, 2.11946)
texture = ExtResource("5_kpb35")

[node name="Continue" type="TextureButton" parent="PauseMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 386.0
offset_top = 350.0
offset_right = 576.0
offset_bottom = 402.0
scale = Vector2(2.04011, 2.04011)
texture_normal = ExtResource("6_um56d")
texture_pressed = ExtResource("7_m7d1w")
texture_hover = ExtResource("7_m7d1w")

[node name="Exit" type="TextureButton" parent="PauseMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 384.0
offset_top = 472.0
offset_right = 574.0
offset_bottom = 524.0
scale = Vector2(2.04011, 2.04011)
texture_normal = ExtResource("8_fa0fg")
texture_pressed = ExtResource("9_3xnu2")
texture_hover = ExtResource("9_3xnu2")

[connection signal="pressed" from="Pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PauseMenu/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PauseMenu/Exit" to="." method="_on_exit_pressed"]
